2011-09-09  Jason Merrill  <jason@redhat.com>

	* call.c (implicit_conversion): Check BRACE_ENCLOSED_INITIALIZER_P
	before forcing instantiation.

2011-09-08  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/50324
	* typeck2.c (digest_init_r): Call complete_type_or_maybe_complain
	instead of complete_type_or_else.

2011-09-08  Dodji Seketeli  <dodji@redhat.com>

	PR c++/33255 - Support -Wunused-local-typedefs warning
	* name-lookup.c (pushdecl_maybe_friend_1): Use the new
	record_locally_defined_typedef.
    	* decl.c (finish_function): Use the new
    	maybe_warn_unused_local_typedefs.
    	(grokfield): Use the new record_locally_defined_typedef.
	* parser.c (lookup_name): Use the new maybe_record_typedef_use.

2011-09-07  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/50309
	* decl.c (grokdeclarator): Check u.function.exception_specification
	for error_mark_node.

2011-09-07  Jason Merrill  <jason@redhat.com>

	PR c++/50298
	* parser.c (cp_parser_member_declaration): Don't require a constant
	rvalue here in C++0x.

	* pt.c (type_unification_real): Correct complain arg for tsubsting
	default template args.

	* pt.c (tsubst_aggr_type): Check TYPE_P before tsubsting.

2011-09-06  Jason Merrill  <jason@redhat.com>

	PR c++/50296
	* semantics.c (register_constexpr_fundef): Call is_valid_constexpr_fn.
	(cx_check_missing_mem_inits): Handle bases and empty trivial members.
	(validate_constexpr_fundecl): Remove.
	* decl.c (start_preparsed_function): Don't call it.
	* cp-tree.h: Don't declare it.

2011-09-04  Jason Merrill  <jason@redhat.com>

	PR c++/49267
	* call.c (reference_binding): Don't set is_lvalue for an rvalue
	reference rfrom.

	PR c++/49267
	PR c++/49458
	DR 1328
	* call.c (reference_binding): Set rvaluedness_matches_p properly
	for reference to function conversion ops.
	(compare_ics): Adjust.

	* class.c (trivial_default_constructor_is_constexpr): Rename from
	synthesized_default_constructor_is_constexpr.